--- a/Cluster_1/cluster.ini
+++ b/Cluster_1/cluster.ini
@@ -1,1 +1,34 @@
 
+[GAMEPLAY]
+game_mode = endless
+max_players = 6
+pvp = false
+pause_when_empty = true
+
+
+[NETWORK]
+lan_only_cluster = false
+cluster_intention = social
+cluster_password = 123456
+cluster_description = xzy的后宫
+cluster_name = polin的世界
+offline_cluster = false
+cluster_language = zh
+whitelist_slots = 0
+
+
+[MISC]
+console_enabled = true
+
+
+[SHARD]
+shard_enabled = true
+bind_ip = 127.0.0.1
+master_ip = 127.0.0.1
+master_port = 10888
+cluster_key = defaultPass
+
+[STEAM]
+steam_group_admins = false
+steam_group_id = 0
+steam_group_only = false
